adding faction information (#14)
